style.css
*{
    margin:0;
    padding:0;
    font-family: 'Roboto', sans-serif;
}
@keyframes pulse{
    from{color:lightgrey;}
    to{ color: black;}
}

.website-background {
    width: 100%;
    background: #52c234;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #061700, #92be86);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #061700, #92be86); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}
.banner-wrap{
    display: flex;
    justify-content: center;
}
.banner {
    width: 90%;
    height: 448px;
    background-image: url(IMG_20210113_105507.jpg);
    background-size: cover;
    background-position: center;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    border-bottom-left-radius: 60px;
    border-bottom-right-radius: 60px;
    overflow: hidden;
    
}
.banner-fade{
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #ffffffb3;
}
.banner-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    z-index: 1;
    
}
.banner-name {
    font-family: 'Parisienne', cursive;
    font-size: 3rem;
}
.banner-content>p{
    margin-bottom: 4rem;
}

.website-content{
    margin-top: 2rem;
    display: flex;
    justify-content: center;
    flex-direction: column;
}
.article-wrap{
    width: 100%;
    height: fit-content;
    background-color: white;
    display: flex;
    justify-content: center;
}
article {
    width: 90%;
}
article h2, article p, h2 {
    margin-top: 2rem;
    margin-bottom: 2rem;

}
.content-wrap{
    margin-top: 2rem;
    background-color: rgba(255, 255, 255, 0.4);
    width: 100%; 
    height: fit-content;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.headline-wrap{
    width: 90%;
}

/*Cards*/

.card-wrap{
    width:90%;
    margin-bottom: 2rem;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    position: relative;
    align-self: center;
}

.card {
    width: 300px;
    height: 300px; 
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: white;
    border-radius: 12px;
    overflow: hidden;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    position:relative;

} 
.card-overlay{
      position: absolute;
      top: 2rem;
      left:0;
      width:100%;
      height: 3rem;
      background-color: rgba(0, 0, 0, 0.5);
      display:flex;
      justify-content: center;
      align-items: center;
      color: white;
      font-size: 1.5rem;
  }

.card:hover {
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
  }
 
  .card img{
      height: 60%;
      width:100%;
      object-fit: cover;
  } 
 

.card section{
      flex:1;
      display: flex;
      justify-content: center;
      align-items: center;
      text-align: center;
  }

  .card2 {
    flex: 2;
    height: 256px;
    display: flex;  
    flex-direction: column;    
    background-color: white;
    border-radius: 12px;
    margin-right: 2rem;
  }
  .card3 {
    flex: 1;
    height: 256px;
    display: flex;  
    flex-direction: column;
    background-color: white;
    border-radius: 12px;
    position: relative;
  }

  h3{
      align-self: flex-start;
      margin: 12px;
  }

  li{
      padding: 8px;
      padding-left: 12px;
      list-style-type: none;
      transition: 1s;
      position: relative;
  }

  li:hover{
      background-color: rgba(0, 0, 0, 0.3);
      transition: 1s;      
  }
  
  .card2 li:hover:nth-of-type(1)::after{
      content: "2008-2009";
      color: white;
        position: absolute;
        right: 8px;
        top:8px;
        transition: 1s;
  }
  .card2 li:hover:nth-of-type(2)::after{
    content: "extra work during studies 2010";
    color: white;
      position: absolute;
      right: 8px;
      top:8px;
      transition: 1s;
}
.card2 li:hover:nth-of-type(3)::after{
    content: "summers during studies 2010-2011";
    color: white;
      position: absolute;
      right: 8px;
      top:8px;
      transition: 1s;
}
.card2 li:hover:nth-of-type(4)::after{
    content: "2012-2015";
    color: white;
      position: absolute;
      right: 8px;
      top:8px;
      transition: 1s;
}
.card2 li:hover:nth-of-type(5)::after{
    content: "2015-2021";
    color: white;
      position: absolute;
      right: 8px;
      top:8px;
      transition: 1s;
}
.card3 i{
    font-size: 2rem;
    color: lightgrey;
    animation: pulse 2s alternate infinite;
    align-self: center;
    position: absolute;
    bottom: 24px;
}
.card3 p{
    color: lightgrey;
    animation: pulse 2s alternate infinite;
    align-self: center;
    position: absolute;
    bottom: 12px;
}

/* formulär*/

.form-wrap{
    width:40%;
    height:256px;
    display: flex;  
    flex-direction: column;
    background-color: white;
    border-radius: 12px;
    margin-bottom: 2rem;
}
form{
    display: flex;
    height: 100%;
    margin: 0.5rem;
    flex-direction: column;
}
.split{
    display: flex;
    flex-direction: row;  
}
label{
    flex:1;
    margin: 0.5rem;
}
input{
    flex: 1;
    padding: 0.3rem;
    border-radius: 0.3rem;

}
textarea{
    min-height: 2rem;
    flex: 2;
    border-radius: 0.3rem;
}


/*navbar*/
.nav-wrap{
    width: 90%;
    display: flex;
    justify-content: space-between;
}

.nav-link{
    display: flex;
    align-items: center;
    justify-content: left;
}
.nav-link i{
   font-size: 2rem;
}

.nav-link a, .nav-link p{
    text-decoration: none;
    color: black;
    padding: 1rem;
}

.content-wrap:last-of-type{
    background-color: white;
}


/*on phone*/
@media screen and (max-width: 600px) {
    .banner {
        height: 312px;}
        
    .card-wrap {
        flex-direction: column;
    }
    .card:nth-of-type(2) {
        margin-top: 2rem;
        margin-bottom: 2rem;
    }

    .card2{
        flex:none;
        margin: 0;
        width: 300px;
        height: 256px;
    }

    .card3{
        flex:none;
        margin-top: 1rem;
        width: 300px;
        height: 224px;
    }
   .card2 li:hover{ 
    background-color: rgba(0, 0, 0, 0.9);
   }
   .nav-wrap{
       flex-direction: column; 
}

